--- a/css/resume.css
+++ b/css/resume.css
@@ -1,3 +1,5 @@
+@import url(//fonts.googleapis.com/earlyaccess/hanna.css);
+
 body {
   font-family: 'Open Sans', serif;
   padding-top: 54px;
@@ -144,4 +146,18 @@ a {
 
 a:hover, a:focus, a:active {
   color: #824027;
+}
+
+.mentee{
+  color: #BD5D38;
+  font-family: 'Hanna', sans-serif;
+}
+
+.subject{
+  font-size: 1.35rem;
+  font-family: 'Hanna', sans-serif !important;
+}
+
+*{
+  font-family: 'Hanna', sans-serif !important;
 }
